fix: eliminate horizontal nav scroll on smaller devices

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -72,8 +72,8 @@
         display: inline;
 
         a {
-          padding-left: 10px;
-          padding-right: 10px;
+          padding-left: 8px;
+          padding-right: 8px;
         }
       }
     }
